--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.6",
+    "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.510.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6"
   }
 }
