--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "export": "next export"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.1.6",
+    "dotenv": "^16.5.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "supabase": "^2.24.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
